<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apache.tapestry</groupId>
    <artifactId>tapestry-project</artifactId>
    <packaging>pom</packaging>
    <version>4.1.7-SNAPSHOT</version>
    <description>Java Web Application Framework</description>
    <name>Tapestry</name>
    <inceptionYear>2006</inceptionYear>
    <url>http://tapestry.apache.org/tapestry4.1/</url>

   <parent>
        <groupId>org.apache</groupId>
	     <artifactId>apache</artifactId>
	     <version>6</version>
   </parent>

    <licenses>
        <license>
            <name>Apache Software License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Apache Software Foundation</name>
        <url>http://www.apache.org</url>
    </organization>

    <issueManagement>
        <system>jira</system>
        <url>http://issues.apache.org/jira/browse/TAPESTRY</url>
    </issueManagement>

    <scm>
        <connection>scm:svn:https://svn.apache.org/repos/asf/tapestry/tapestry4/trunk</connection>
        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/tapestry/tapestry4/trunk/</developerConnection>
        <url>http://svn.apache.org/viewcvs.cgi/tapestry/tapestry4/trunk</url>
    </scm>

    <mailingLists>
        <mailingList>
            <name>Tapestry User List</name>
            <subscribe>users-subscribe@tapestry.apache.org</subscribe>
            <unsubscribe>users-unsubscribe@tapestry.apache.org</unsubscribe>
            <archive>http://mail-archives.apache.org/mod_mbox/tapestry-users/</archive>
            <otherArchives>
                <otherArchive>http://www.nabble.com/Tapestry---User-f340.html</otherArchive>
                <otherArchive>http://www.nabble.com/Jakarta-Tapestry-f302.html</otherArchive>
            </otherArchives>
        </mailingList>
        <mailingList>
            <name>Tapestry Developer List</name>
            <subscribe>dev-subscribe@tapestry.apache.org</subscribe>
            <unsubscribe>dev-unsubscribe@tapestry.apache.org</unsubscribe>
            <archive>http://mail-archives.apache.org/mod_mbox/tapestry-dev/</archive>
            <otherArchives>
                <otherArchive>http://www.nabble.com/Tapestry---Dev-f339.html</otherArchive>
            </otherArchives>
        </mailingList>
        <mailingList>
            <name>Tapestry Commits List</name>
            <subscribe>commits-subscribe@tapestry.apache.org</subscribe>
            <unsubscribe>commits-unsubscribe@tapestry.apache.org</unsubscribe>
            <archive>http://mail-archives.apache.org/mod_mbox/tapestry-commits/</archive>
        </mailingList>
    </mailingLists>

    <developers>
        <developer>
            <id>hls</id>
            <name>Howard M. Lewis Ship</name>
            <email>hlship@apache.org</email>
            <url>http://howardlewisship.com</url>
            <roles>
                <role>Menace</role>
            </roles>
            <timezone>-8</timezone>
        </developer>
        <developer>
            <id>jk</id>
            <name>Jesse Kuhnert</name>
            <email>jkuhnert@apache.org</email>
            <url>http://blog.opencomponentry.com</url>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
        <developer>
            <id>aa</id>
            <name>Andreas Andreou</name>
            <email>andyhot@apache.org</email>
            <url>http://andyhot.di.uoa.gr</url>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>2</timezone>
        </developer>
         <developer>
            <id>scm</id>
            <name>Marcus Schulte</name>
            <email>mschulte@apache.org</email>
            <url>http://marcus-schulte.ch</url>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>1</timezone>
        </developer>
    </developers>

    <modules>
        <module>tapestry-framework</module>
        <module>tapestry-annotations</module>
        <module>tapestry-contrib</module>
        <module>tapestry-portlet</module>
        <module>tapestry-examples</module>
		<module>tapestry-archetype</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jboss</groupId>
                <artifactId>javassist</artifactId>
                <version>3.7.ga</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>hivemind</groupId>
                <artifactId>hivemind</artifactId>
                <version>1.1.1</version>
                <scope>compile</scope>
                <exclusions>
                    <exclusion>
                        <groupId>jboss</groupId>
                        <artifactId>javassist</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>hivemind</groupId>
                <artifactId>hivemind-lib</artifactId>
                <version>1.1.1</version>
                <scope>compile</scope>
                <exclusions>
                    <exclusion>
                        <groupId>jboss</groupId>
                        <artifactId>javassist</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- Really, a transitive dependency of hivemind. -->
            <dependency>
                <groupId>oro</groupId>
                <artifactId>oro</artifactId>
                <version>2.0.8</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.1</version>
                <!-- This is almost always provided by the container. If not, then WARs will have to
                    create an explicit dependency. -->
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>2.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymockclassextension</artifactId>
                <version>2.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>5.1</version>
                <classifier>jdk15</classifier>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.3</version>
            </dependency>
            <dependency>
                <groupId>commons-pool</groupId>
                <artifactId>commons-pool</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>ognl</groupId>
                <artifactId>ognl</artifactId>
                <version>2.7.3</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>2.4</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>1.2.1</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>1.7.0</version>
            </dependency>
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>2.4</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>org.apache.tapestry</groupId>
                <artifactId>tapestry-test</artifactId>
                <version>4.1.4</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>backport-util-concurrent</groupId>
                <artifactId>backport-util-concurrent</artifactId>
                <version>3.1</version>
            </dependency>
            <dependency>
                <groupId>org.openqa.selenium.client-drivers</groupId>
                <artifactId>selenium-java-client-driver</artifactId>
                <version>0.9.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openqa.selenium.server</groupId>
                <artifactId>selenium-server</artifactId>
                <version>0.9.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.3</version>
                <inherited>true</inherited>
                <executions>
                    <execution>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.3</version>
                    <inherited>true</inherited>
                    <configuration>
                        <argLine>-Xmx612m -XX:MaxPermSize=324m</argLine>
                        <systemProperties>
                            <property>
                                <name>user.language</name>
                                <value>en_US</value>
                            </property>
                        </systemProperties>
                        <excludedGroups>integration</excludedGroups>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.0.2</version>
                    <inherited>true</inherited>
                    <configuration>
                        <source>1.4</source>
                        <target>1.4</target>
                    </configuration>
                    <executions>
                        <execution>
                            <id>compile-tests</id>
                            <phase>process-test-sources</phase>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                            <configuration>
                                <source>1.5</source>
                                <target>1.5</target>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.3</version>
                    <inherited>true</inherited>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>2.0</version>
                    <inherited>true</inherited>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.2-beta-4</version>
                    <inherited>true</inherited>
                    <configuration>
                        <descriptors>
                            <descriptor>src/main/assembly/dep.xml</descriptor>
                            <descriptor>src/main/assembly/full.xml</descriptor>
                        </descriptors>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.3</version>
                <inherited>true</inherited>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.1.2</version>
                <inherited>true</inherited>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>project-team</report>
                            <report>mailing-list</report>
                            <report>issue-tracking</report>
                            <report>license</report>
                            <report>scm</report>
                            <report>index</report>
                            <report>dependencies</report>
                            <report>dependency-convergence</report>
                        </reports>
                    </reportSet>
                </reportSets>
                <configuration>
                    <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <linksource>true</linksource>
                    <aggregate>true</aggregate>
                    <excludePackageNames>
                        org.apache.tapestry.timetracker:org.apache.tapestry.workbench:org.apache.tapestry.vlib:org.apache.tapestry.wap
                    </excludePackageNames>
                    <tags>
                        <tag>
                            <name>todo</name>
                            <placement>a</placement>
                            <head>To do something:</head>
                        </tag>
                    </tags>
                    <links>
                        <link>http://hivemind.apache.org/hivemind1/hivemind/apidocs/</link>
                        <link>http://java.sun.com/j2se/1.4.2/docs/api/</link>
                        <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
                        <link>http://jakarta.apache.org/commons/codec/api-release/</link>
                        <link>http://jakarta.apache.org/commons/fileupload/apidocs/</link>
                        <link>http://jakarta.apache.org/commons/logging/apidocs/</link>
                        <link>http://www.opensymphony.com/ognl/api/</link>
                    </links>
                    <stylesheetfile>${basedir}/src/site/resources/css/jdstyle.css</stylesheetfile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
        </plugins>
    </reporting>

    <distributionManagement>
        <site>
            <id>tapestry</id>
            <url>scpexe://people.apache.org/www/tapestry.apache.org/tapestry4.1/</url>
        </site>
    </distributionManagement>

    <repositories>
        <repository>
            <id>apache.snapshots</id>
			<url>http://repository.apache.org/snapshots</url>
        </repository>
        <repository>
            <id>OpenQA_Release</id>
            <name>OpenQA Release Repository</name>
            <url>http://archiva.openqa.org/repository/releases</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
			<url>http://repository.apache.org/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </pluginRepository>
        <pluginRepository>
            <id>codehaus.org</id>
            <url>http://repository.codehaus.org</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

</project>
